--- a/src/components/Bubble/Bubble.module.css
+++ b/src/components/Bubble/Bubble.module.css
@@ -1,3 +1,5 @@
+/* add motion to icons */
+
 @keyframes float {
     0% {
         box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
@@ -13,6 +15,9 @@
     }
 }
 
+@keyframes go-right {
+}
+
 .float {
     transition: all 1s ease;
     animation: float 6s ease-in-out infinite;
@@ -26,6 +31,7 @@
 
 .bubble svg {
     font-size: 300px;
+    color: #292d3e;
 }
 
 .emojiBubble {
