--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,13 +1,15 @@
-html, body {
+html,
+body {
     height: 100%;
 }
 
 body {
     margin: 0;
+    background-color: #292d3e;
 }
 
 #gatsby-focus-wrapper {
-    height: 100%
+    height: 100%;
 }
 
 #___gatsby {
