--- a/src/components/Bubble/Bubble.module.css
+++ b/src/components/Bubble/Bubble.module.css
@@ -1,5 +1,3 @@
-/* add motion to icons */
-
 @keyframes float {
     0% {
         box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
@@ -12,6 +10,12 @@
     100% {
         box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
         transform: translatey(0px);
+    }
+}
+
+@keyframes threedspin {
+    100% {
+        transform: rotate3d(1, 1, 1, 360deg);
     }
 }
 
@@ -33,7 +37,7 @@
 .float img:hover {
     cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🎉</text></svg>")
             16 0,
-        auto; /*!emojicursor.app*/
+        auto;
 }
 
 .bubble {
@@ -42,8 +46,12 @@
 }
 
 .bubble svg {
-    animation: appear 10s;
+    animation: threedspin 2s;
     font-size: 50px;
+}
+
+.bubble svg:hover {
+    transform: scale3d(1.2, 1.2, 1.2);
 }
 
 a.bubble {
