Put fade in animation back

--- a/src/components/Bubble/Bubble.module.css
+++ b/src/components/Bubble/Bubble.module.css
@@ -14,6 +14,9 @@
 }
 
 @keyframes threedspin {
+    50% {
+        transform: rotate3d(1, 1, 1, 180deg);
+    }
     100% {
         transform: rotate3d(1, 1, 1, 360deg);
     }
@@ -46,7 +49,7 @@
 }
 
 .bubble svg {
-    animation: threedspin 2s;
+    animation: appear 3.5s;
     font-size: 50px;
 }
 
