--- a/src/components/Bubble/Bubble.module.css
+++ b/src/components/Bubble/Bubble.module.css
@@ -32,6 +32,7 @@
     }
 }
 
+.musicIcon,
 .float {
     transition: all 1s ease;
     animation: float 6s ease-in-out infinite;
@@ -39,6 +40,12 @@
 
 .float img:hover {
     cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🎉</text></svg>")
+            16 0,
+        auto;
+}
+
+.musicIcon img:hover {
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🎶</text></svg>")
             16 0,
         auto;
 }
